fix: bucket typo

--- a/infra/step_function/template.yml
+++ b/infra/step_function/template.yml
@@ -242,11 +242,11 @@ Resources:
                   - s3:PutObject
                   - s3:GetObject
                   - s3:DeleteObject
-                Resource: !Sub "arn:aws:s3:::${bucket}/*"
+                Resource: !Sub "arn:aws:s3:::${Bucket}/*"
               - Effect: Allow
                 Action: s3:ListAllMyBuckets
                 Resource: "arn:aws:s3:::*"
               - Effect: Allow
                 Action: s3:ListBucket
-                Resource: !Sub "arn:aws:s3:::${bucket}"
+                Resource: !Sub "arn:aws:s3:::${Bucket}"
 
