fix: update permission

--- a/infra/deploy/template.yml
+++ b/infra/deploy/template.yml
@@ -67,6 +67,7 @@ Resources:
               - states:PublishStateMachineVersion
               - states:TagResource
               - states:DescribeStateMachine
+              - states:UpdateStateMachine
             Resource: !Sub arn:aws:states:${AWS::Region}:${AWS::AccountId}:stateMachine:${StepFunction}
           - Effect: Allow
             Action: iam:PassRole
